@startuml
class Edificio {
    -vida
    -ubicacion: Casillero
    + {abstract} pasarTurno()
    + {abstract} recibirDaño(daño)
    
    + destruir()
}

class EdificioConstruido{
 + {abstract} construir(Billetera, Casillero)
}

class EdificioEnConstruccion {
    - vaASer: Edificio
    - turnosRestantes
    + pasarTurno()
}

class EdificioProto {
    - escudo
    - estadoEnergetico
    + recibirDaño(daño)
    + pasarTurno()
    '+ estaActivo()'
    '+ setEstadoEnergetico(estado)'
}

class EdificioZerg {
    + pasarTurno()
}

class Criadero {
 + engendrarZangano()
}

class ReservaDeReproduccion {}

class Extractor {
 + agregarZangano()
 + extraerGas()
}

class Guarida {}

class Espiral {}

EdificioZerg <|-- Criadero 
EdificioZerg <|-- ReservaDeReproduccion
EdificioZerg <|-- Extractor
EdificioZerg <|-- Guarida 
EdificioZerg <|-- Espiral

class NexoMineral {}

class Pilon {}

class Asimilador {}

class Acceso {}

class PuertoEstelar {}

EdificioProto <|-- NexoMineral
EdificioProto <|-- Pilon
EdificioProto <|-- Asimilador
EdificioProto <|-- Acceso
EdificioProto <|-- PuertoEstelar

Edificio <|... EdificioConstruido
Edificio <|... EdificioEnConstruccion
EdificioConstruido <|... EdificioZerg
EdificioConstruido <|... EdificioProto
@enduml